--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="cruzadinha.css">
+    <script src="cruzadinha.js"></script>
 </head>
 <body>
     <input type="text">
