--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -9,45 +9,52 @@
     <script src="cruzadinha.js"></script>
 </head>
 <body>
+    <div>
     <input id="ram_R" class="ram" type="text">
     <input id="ram_A" class="ram" type="text">
     <input id="ram_M" class="ram" type="text">
-
+</div>
+<div>
     <input id="rom_R" class="rom" type="text">
     <input id="rom_O" class="rom" type="text">
     <input id="rom_M" class="rom" type="text">
-
+</div>
+<div>
     <input id="cpu_C" class="cpu" type="text">
     <input id="cpu_P" class="cpu" type="text">
     <input id="cpu_U" class="cpu" type="text">
+</div>
+<div>
+    <input id="ula_U" class="ula" type="text">
+    <input id="ula_L" class="ula" type="text">
+    <input id="ula_A" class="ula" type="text">
+</div>
+    <input id="registradores_R" class="registradores" type="text">
+    <input id="registradores_E" class="registradores" type="text">
+    <input id="registradores_G" class="registradores" type="text">
+    <input id="registradores_I" class="registradores" type="text">
+    <input id="registradores_S" class="registradores" type="text">
+    <input id="registradores_T" class="registradores" type="text">
+    <input id="registradores_R" class="registradores" type="text">
+    <input id="registradores_A" class="registradores" type="text">
+    <input id="registradores_D" class="registradores" type="text">
+    <input id="registradores_O" class="registradores" type="text">
+    <input id="registradores_R" class="registradores" type="text">
+    <input id="registradores_E" class="registradores" type="text">
+    <input id="registradores_S" class="registradores" type="text">
 
-    <input id="ula_" class="ula" type="text">
-    <input id="ula_" class="ula" type="text">
-    <input id="ula_" class="ula" type="text">
+    <input id="eprom_E" class="eprom" type="text">
+    <input id="eprom_P" class="eprom" type="text">
+    <input id="eprom_R" class="eprom" type="text">
+    <input id="eprom_O" class="eprom" type="text">
+    <input id="eprom_M" class="eprom" type="text">
 
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
+    <input id="flash_F" class="flash" type="text">
+    <input id="flash_L" class="flash" type="text">
+    <input id="flash_A" class="flash" type="text">
+    <input id="flash_S" class="flash" type="text">
+    <input id="flash_H" class="flash" type="text">
+
     <input id="" type="text">
     <input id="" type="text">
     <input id="" type="text">
