--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -29,6 +29,7 @@
     <input id="ula_L" class="ula" type="text">
     <input id="ula_A" class="ula" type="text">
 </div>
+<div>
     <input id="registradores_R" class="registradores" type="text">
     <input id="registradores_E" class="registradores" type="text">
     <input id="registradores_G" class="registradores" type="text">
@@ -42,93 +43,110 @@
     <input id="registradores_R" class="registradores" type="text">
     <input id="registradores_E" class="registradores" type="text">
     <input id="registradores_S" class="registradores" type="text">
-
+</div>
+<div>
     <input id="eprom_E" class="eprom" type="text">
     <input id="eprom_P" class="eprom" type="text">
     <input id="eprom_R" class="eprom" type="text">
     <input id="eprom_O" class="eprom" type="text">
     <input id="eprom_M" class="eprom" type="text">
-
+</div>
+<div>
     <input id="flash_F" class="flash" type="text">
     <input id="flash_L" class="flash" type="text">
     <input id="flash_A" class="flash" type="text">
     <input id="flash_S" class="flash" type="text">
     <input id="flash_H" class="flash" type="text">
-
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
-    <input id="" type="text">
+</div>
+<div>
+    <input id="memoria_de_massa_M" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_E" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_M" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_O" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_R" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_I" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_A" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_D" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_E" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_M" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_A" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_S" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_S" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_A" class="memoria_de_massa" type="text">
+</div>
+<div>
+    <input id="dma_D" class="dma" type="text">
+    <input id="dma_M" class="dma" type="text">
+    <input id="dma_A" class="dma" type="text">
+</div>
+<div>
+    <input id="cs_C" class="cs" type="text">
+    <input id="cs_S" class="cs" type="text">
+</div>
+<div>
+    <input id="address_bus_A" class="address_bus" type="text">
+    <input id="address_bus_D" class="address_bus" type="text">
+    <input id="address_bus_D" class="address_bus" type="text">
+    <input id="address_bus_R" class="address_bus" type="text">
+    <input id="address_bus_E" class="address_bus" type="text">
+    <input id="address_bus_S" class="address_bus" type="text">
+    <input id="address_bus_S" class="address_bus" type="text">
+    <input id="address_bus_B" class="address_bus" type="text">
+    <input id="address_bus_U" class="address_bus" type="text">
+    <input id="address_bus_S" class="address_bus" type="text">
+</div>
+<div>
+    <input id="data_bus_D" class="data_bus" type="text">
+    <input id="data_bus_A" class="data_bus" type="text">
+    <input id="data_bus_T" class="data_bus" type="text">
+    <input id="data_bus_A" class="data_bus" type="text">
+    <input id="data_bus_B" class="data_bus" type="text">
+    <input id="data_bus_U" class="data_bus" type="text">
+    <input id="data_bus_S" class="data_bus" type="text">
+</div>
+<div>
+    <input id="I5_I" class="I5" type="text">
+    <input id="I5_5" class="I5" type="text">
+</div>
+<div>
+    <input id="I7_I" class="I7" type="text">
+    <input id="I7_7" class="I7" type="text">
+</div>
+<div>
+    <input id="dual_core_D" class="dual_core" type="text">
+    <input id="dual_core_U" class="dual_core" type="text">
+    <input id="dual_core_A" class="dual_core" type="text">
+    <input id="dual_core_L" class="dual_core" type="text">
+    <input id="dual_core_C" class="dual_core" type="text">
+    <input id="dual_core_O" class="dual_core" type="text">
+    <input id="dual_core_R" class="dual_core" type="text">
+    <input id="dual_core_E" class="dual_core" type="text">
+</div>
+<div>
+    <input id="quad_core_Q" class="quad_core" type="text">
+    <input id="quad_core_U" class="quad_core" type="text">
+    <input id="quad_core_A" class="quad_core" type="text">
+    <input id="quad_core_D" class="quad_core" type="text">
+    <input id="quad_core_C" class="quad_core" type="text">
+    <input id="quad_core_O" class="quad_core" type="text">
+    <input id="quad_core_R" class="quad_core" type="text">
+    <input id="quad_core_E" class="quad_core" type="text">
+</div>
+<div>
+    <input id="threads_T" class="threads" type="text">
+    <input id="threads_H" class="threads" type="text">
+    <input id="threads_R" class="threads" type="text">
+    <input id="threads_E" class="threads" type="text">
+    <input id="threads_A" class="threads" type="text">
+    <input id="threads_D" class="threads" type="text">
+    <input id="threads_S" class="threads" type="text">
+</div>
+<div>
+    <input id="cache_C" class="cache" type="text">
+    <input id="cache_A" class="cache" type="text">
+    <input id="cache_C" class="cache" type="text">
+    <input id="cache_H" class="cache" type="text">
+    <input id="cache_E" class="cache" type="text">
+</div>
 </body>
 </html>
