html com imputs prontas

--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -10,143 +10,143 @@
 </head>
 <body>
     <div>
-    <input id="ram_R" class="ram" type="text">
-    <input id="ram_A" class="ram" type="text">
-    <input id="ram_M" class="ram" type="text">
+    <input id="ram_R" maxlength="1" class="ram" type="text">
+    <input id="ram_A" maxlength="1" class="ram" type="text">
+    <input id="ram_M" maxlength="1" class="ram" type="text">
 </div>
 <div>
-    <input id="rom_R" class="rom" type="text">
-    <input id="rom_O" class="rom" type="text">
-    <input id="rom_M" class="rom" type="text">
+    <input id="rom_R" maxlength="1" class="rom" type="text">
+    <input id="rom_O" maxlength="1" class="rom" type="text">
+    <input id="rom_M" maxlength="1" class="rom" type="text">
 </div>
 <div>
-    <input id="cpu_C" class="cpu" type="text">
-    <input id="cpu_P" class="cpu" type="text">
-    <input id="cpu_U" class="cpu" type="text">
+    <input id="cpu_C" maxlength="1" class="cpu" type="text">
+    <input id="cpu_P" maxlength="1" class="cpu" type="text">
+    <input id="cpu_U" maxlength="1" class="cpu" type="text">
 </div>
 <div>
-    <input id="ula_U" class="ula" type="text">
-    <input id="ula_L" class="ula" type="text">
-    <input id="ula_A" class="ula" type="text">
+    <input id="ula_U" maxlength="1" class="ula" type="text">
+    <input id="ula_L" maxlength="1" class="ula" type="text">
+    <input id="ula_A" maxlength="1" class="ula" type="text">
 </div>
 <div>
-    <input id="registradores_R" class="registradores" type="text">
-    <input id="registradores_E" class="registradores" type="text">
-    <input id="registradores_G" class="registradores" type="text">
-    <input id="registradores_I" class="registradores" type="text">
-    <input id="registradores_S" class="registradores" type="text">
-    <input id="registradores_T" class="registradores" type="text">
-    <input id="registradores_R" class="registradores" type="text">
-    <input id="registradores_A" class="registradores" type="text">
-    <input id="registradores_D" class="registradores" type="text">
-    <input id="registradores_O" class="registradores" type="text">
-    <input id="registradores_R" class="registradores" type="text">
-    <input id="registradores_E" class="registradores" type="text">
-    <input id="registradores_S" class="registradores" type="text">
+    <input id="registradores_R" maxlength="1" class="registradores" type="text">
+    <input id="registradores_E" maxlength="1" class="registradores" type="text">
+    <input id="registradores_G" maxlength="1"class="registradores" type="text">
+    <input id="registradores_I" maxlength="1" class="registradores" type="text">
+    <input id="registradores_S" maxlength="1" class="registradores" type="text">
+    <input id="registradores_T" maxlength="1" class="registradores" type="text">
+    <input id="registradores_R" maxlength="1" class="registradores" type="text">
+    <input id="registradores_A" maxlength="1" class="registradores" type="text">
+    <input id="registradores_D" maxlength="1" class="registradores" type="text">
+    <input id="registradores_O" maxlength="1" class="registradores" type="text">
+    <input id="registradores_R" maxlength="1" class="registradores" type="text">
+    <input id="registradores_E" maxlength="1" class="registradores" type="text">
+    <input id="registradores_S" maxlength="1" class="registradores" type="text">
 </div>
 <div>
-    <input id="eprom_E" class="eprom" type="text">
-    <input id="eprom_P" class="eprom" type="text">
-    <input id="eprom_R" class="eprom" type="text">
-    <input id="eprom_O" class="eprom" type="text">
-    <input id="eprom_M" class="eprom" type="text">
+    <input id="eprom_E" maxlength="1" class="eprom" type="text">
+    <input id="eprom_P" maxlength="1" class="eprom" type="text">
+    <input id="eprom_R" maxlength="1" class="eprom" type="text">
+    <input id="eprom_O" maxlength="1" class="eprom" type="text">
+    <input id="eprom_M" maxlength="1" class="eprom" type="text">
 </div>
 <div>
-    <input id="flash_F" class="flash" type="text">
-    <input id="flash_L" class="flash" type="text">
-    <input id="flash_A" class="flash" type="text">
-    <input id="flash_S" class="flash" type="text">
-    <input id="flash_H" class="flash" type="text">
+    <input id="flash_F" maxlength="1" class="flash" type="text">
+    <input id="flash_L" maxlength="1" class="flash" type="text">
+    <input id="flash_A" maxlength="1" class="flash" type="text">
+    <input id="flash_S" maxlength="1" class="flash" type="text">
+    <input id="flash_H" maxlength="1" class="flash" type="text">
 </div>
 <div>
-    <input id="memoria_de_massa_M" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_E" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_M" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_O" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_R" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_I" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_A" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_D" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_E" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_M" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_A" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_S" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_S" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_A" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_M" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_E" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_M" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_O" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_R" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_I" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_A" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_D" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_E" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_M" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_A" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_S" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_S" maxlength="1" class="memoria_de_massa" type="text">
+    <input id="memoria_de_massa_A" maxlength="1" class="memoria_de_massa" type="text">
 </div>
 <div>
-    <input id="dma_D" class="dma" type="text">
-    <input id="dma_M" class="dma" type="text">
-    <input id="dma_A" class="dma" type="text">
+    <input id="dma_D" maxlength="1" class="dma" type="text">
+    <input id="dma_M" maxlength="1" class="dma" type="text">
+    <input id="dma_A" maxlength="1" class="dma" type="text">
 </div>
 <div>
-    <input id="cs_C" class="cs" type="text">
-    <input id="cs_S" class="cs" type="text">
+    <input id="cs_C" maxlength="1" class="cs" type="text">
+    <input id="cs_S" maxlength="1" class="cs" type="text">
 </div>
 <div>
-    <input id="address_bus_A" class="address_bus" type="text">
-    <input id="address_bus_D" class="address_bus" type="text">
-    <input id="address_bus_D" class="address_bus" type="text">
-    <input id="address_bus_R" class="address_bus" type="text">
-    <input id="address_bus_E" class="address_bus" type="text">
-    <input id="address_bus_S" class="address_bus" type="text">
-    <input id="address_bus_S" class="address_bus" type="text">
-    <input id="address_bus_B" class="address_bus" type="text">
-    <input id="address_bus_U" class="address_bus" type="text">
-    <input id="address_bus_S" class="address_bus" type="text">
+    <input id="address_bus_A" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_D" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_D" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_R" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_E" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_S" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_S" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_B" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_U" maxlength="1" class="address_bus" type="text">
+    <input id="address_bus_S" maxlength="1" class="address_bus" type="text">
 </div>
 <div>
-    <input id="data_bus_D" class="data_bus" type="text">
-    <input id="data_bus_A" class="data_bus" type="text">
-    <input id="data_bus_T" class="data_bus" type="text">
-    <input id="data_bus_A" class="data_bus" type="text">
-    <input id="data_bus_B" class="data_bus" type="text">
-    <input id="data_bus_U" class="data_bus" type="text">
-    <input id="data_bus_S" class="data_bus" type="text">
+    <input id="data_bus_D" maxlength="1" class="data_bus" type="text">
+    <input id="data_bus_A" maxlength="1" class="data_bus" type="text">
+    <input id="data_bus_T" maxlength="1" class="data_bus" type="text">
+    <input id="data_bus_A" maxlength="1" class="data_bus" type="text">
+    <input id="data_bus_B" maxlength="1" class="data_bus" type="text">
+    <input id="data_bus_U" maxlength="1" class="data_bus" type="text">
+    <input id="data_bus_S" maxlength="1" class="data_bus" type="text">
 </div>
 <div>
-    <input id="I5_I" class="I5" type="text">
-    <input id="I5_5" class="I5" type="text">
+    <input id="I5_I" maxlength="1" class="I5" type="text">
+    <input id="I5_5" maxlength="1" class="I5" type="text">
 </div>
 <div>
-    <input id="I7_I" class="I7" type="text">
-    <input id="I7_7" class="I7" type="text">
+    <input id="I7_I" maxlength="1" class="I7" type="text">
+    <input id="I7_7" maxlength="1" class="I7" type="text">
 </div>
 <div>
-    <input id="dual_core_D" class="dual_core" type="text">
-    <input id="dual_core_U" class="dual_core" type="text">
-    <input id="dual_core_A" class="dual_core" type="text">
-    <input id="dual_core_L" class="dual_core" type="text">
-    <input id="dual_core_C" class="dual_core" type="text">
-    <input id="dual_core_O" class="dual_core" type="text">
-    <input id="dual_core_R" class="dual_core" type="text">
-    <input id="dual_core_E" class="dual_core" type="text">
+    <input id="dual_core_D" maxlength="1" class="dual_core" type="text">
+    <input id="dual_core_U" maxlength="1" class="dual_core" type="text">
+    <input id="dual_core_A" maxlength="1" class="dual_core" type="text">
+    <input id="dual_core_L" maxlength="1" class="dual_core" type="text">
+    <input id="dual_core_C" maxlength="1" class="dual_core" type="text">
+    <input id="dual_core_O" maxlength="1" class="dual_core" type="text">
+    <input id="dual_core_R" maxlength="1" class="dual_core" type="text">
+    <input id="dual_core_E" maxlength="1" class="dual_core" type="text">
 </div>
 <div>
-    <input id="quad_core_Q" class="quad_core" type="text">
-    <input id="quad_core_U" class="quad_core" type="text">
-    <input id="quad_core_A" class="quad_core" type="text">
-    <input id="quad_core_D" class="quad_core" type="text">
-    <input id="quad_core_C" class="quad_core" type="text">
-    <input id="quad_core_O" class="quad_core" type="text">
-    <input id="quad_core_R" class="quad_core" type="text">
-    <input id="quad_core_E" class="quad_core" type="text">
+    <input id="quad_core_Q" maxlength="1" class="quad_core" type="text">
+    <input id="quad_core_U" maxlength="1" class="quad_core" type="text">
+    <input id="quad_core_A" maxlength="1" class="quad_core" type="text">
+    <input id="quad_core_D" maxlength="1" class="quad_core" type="text">
+    <input id="quad_core_C" maxlength="1" class="quad_core" type="text">
+    <input id="quad_core_O" maxlength="1" class="quad_core" type="text">
+    <input id="quad_core_R" maxlength="1" class="quad_core" type="text">
+    <input id="quad_core_E" maxlength="1" class="quad_core" type="text">
 </div>
 <div>
-    <input id="threads_T" class="threads" type="text">
-    <input id="threads_H" class="threads" type="text">
-    <input id="threads_R" class="threads" type="text">
-    <input id="threads_E" class="threads" type="text">
-    <input id="threads_A" class="threads" type="text">
-    <input id="threads_D" class="threads" type="text">
-    <input id="threads_S" class="threads" type="text">
+    <input id="threads_T" maxlength="1" class="threads" type="text">
+    <input id="threads_H" maxlength="1" class="threads" type="text">
+    <input id="threads_R" maxlength="1" class="threads" type="text">
+    <input id="threads_E" maxlength="1" class="threads" type="text">
+    <input id="threads_A" maxlength="1" class="threads" type="text">
+    <input id="threads_D" maxlength="1" class="threads" type="text">
+    <input id="threads_S" maxlength="1" class="threads" type="text">
 </div>
 <div>
-    <input id="cache_C" class="cache" type="text">
-    <input id="cache_A" class="cache" type="text">
-    <input id="cache_C" class="cache" type="text">
-    <input id="cache_H" class="cache" type="text">
-    <input id="cache_E" class="cache" type="text">
+    <input id="cache_C" maxlength="1" class="cache" type="text">
+    <input id="cache_A" maxlength="1" class="cache" type="text">
+    <input id="cache_C" maxlength="1" class="cache" type="text">
+    <input id="cache_H" maxlength="1" class="cache" type="text">
+    <input id="cache_E" maxlength="1" class="cache" type="text">
 </div>
 </body>
 </html>
