--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -6,147 +6,161 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="cruzadinha.css">
-    <script src="cruzadinha.js"></script>
+    <!-- <script src="cruzadinha.js"></script> -->
 </head>
 <body>
-    <div>
-    <input id="ram_R" maxlength="1" class="ram" type="text">
-    <input id="ram_A" maxlength="1" class="ram" type="text">
-    <input id="ram_M" maxlength="1" class="ram" type="text">
+    <div class="ram">
+    <div id="r"> </div>
+    <div id="a"> </div>
+    <div id="m"> </div>
+    </div>
+<div class="rom">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+</div>
+<div class="cpu">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+</div>
+<div class="ula">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+</div>
+<div class="registradores">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="rom_R" maxlength="1" class="rom" type="text">
-    <input id="rom_O" maxlength="1" class="rom" type="text">
-    <input id="rom_M" maxlength="1" class="rom" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="cpu_C" maxlength="1" class="cpu" type="text">
-    <input id="cpu_P" maxlength="1" class="cpu" type="text">
-    <input id="cpu_U" maxlength="1" class="cpu" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="ula_U" maxlength="1" class="ula" type="text">
-    <input id="ula_L" maxlength="1" class="ula" type="text">
-    <input id="ula_A" maxlength="1" class="ula" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="registradores_R" maxlength="1" class="registradores" type="text">
-    <input id="registradores_E" maxlength="1" class="registradores" type="text">
-    <input id="registradores_G" maxlength="1"class="registradores" type="text">
-    <input id="registradores_I" maxlength="1" class="registradores" type="text">
-    <input id="registradores_S" maxlength="1" class="registradores" type="text">
-    <input id="registradores_T" maxlength="1" class="registradores" type="text">
-    <input id="registradores_R" maxlength="1" class="registradores" type="text">
-    <input id="registradores_A" maxlength="1" class="registradores" type="text">
-    <input id="registradores_D" maxlength="1" class="registradores" type="text">
-    <input id="registradores_O" maxlength="1" class="registradores" type="text">
-    <input id="registradores_R" maxlength="1" class="registradores" type="text">
-    <input id="registradores_E" maxlength="1" class="registradores" type="text">
-    <input id="registradores_S" maxlength="1" class="registradores" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="eprom_E" maxlength="1" class="eprom" type="text">
-    <input id="eprom_P" maxlength="1" class="eprom" type="text">
-    <input id="eprom_R" maxlength="1" class="eprom" type="text">
-    <input id="eprom_O" maxlength="1" class="eprom" type="text">
-    <input id="eprom_M" maxlength="1" class="eprom" type="text">
+    <div> <div>
+    <div> <div>
 </div>
 <div>
-    <input id="flash_F" maxlength="1" class="flash" type="text">
-    <input id="flash_L" maxlength="1" class="flash" type="text">
-    <input id="flash_A" maxlength="1" class="flash" type="text">
-    <input id="flash_S" maxlength="1" class="flash" type="text">
-    <input id="flash_H" maxlength="1" class="flash" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="memoria_de_massa_M" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_E" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_M" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_O" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_R" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_I" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_A" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_D" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_E" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_M" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_A" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_S" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_S" maxlength="1" class="memoria_de_massa" type="text">
-    <input id="memoria_de_massa_A" maxlength="1" class="memoria_de_massa" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="dma_D" maxlength="1" class="dma" type="text">
-    <input id="dma_M" maxlength="1" class="dma" type="text">
-    <input id="dma_A" maxlength="1" class="dma" type="text">
+    <div> <div>
+    <div> <div>
 </div>
 <div>
-    <input id="cs_C" maxlength="1" class="cs" type="text">
-    <input id="cs_S" maxlength="1" class="cs" type="text">
+    <div> <div>
+    <div> <div>
 </div>
 <div>
-    <input id="address_bus_A" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_D" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_D" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_R" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_E" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_S" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_S" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_B" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_U" maxlength="1" class="address_bus" type="text">
-    <input id="address_bus_S" maxlength="1" class="address_bus" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="data_bus_D" maxlength="1" class="data_bus" type="text">
-    <input id="data_bus_A" maxlength="1" class="data_bus" type="text">
-    <input id="data_bus_T" maxlength="1" class="data_bus" type="text">
-    <input id="data_bus_A" maxlength="1" class="data_bus" type="text">
-    <input id="data_bus_B" maxlength="1" class="data_bus" type="text">
-    <input id="data_bus_U" maxlength="1" class="data_bus" type="text">
-    <input id="data_bus_S" maxlength="1" class="data_bus" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="I5_I" maxlength="1" class="I5" type="text">
-    <input id="I5_5" maxlength="1" class="I5" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
 <div>
-    <input id="I7_I" maxlength="1" class="I7" type="text">
-    <input id="I7_7" maxlength="1" class="I7" type="text">
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
+    <div> </div>
 </div>
-<div>
-    <input id="dual_core_D" maxlength="1" class="dual_core" type="text">
-    <input id="dual_core_U" maxlength="1" class="dual_core" type="text">
-    <input id="dual_core_A" maxlength="1" class="dual_core" type="text">
-    <input id="dual_core_L" maxlength="1" class="dual_core" type="text">
-    <input id="dual_core_C" maxlength="1" class="dual_core" type="text">
-    <input id="dual_core_O" maxlength="1" class="dual_core" type="text">
-    <input id="dual_core_R" maxlength="1" class="dual_core" type="text">
-    <input id="dual_core_E" maxlength="1" class="dual_core" type="text">
-</div>
-<div>
-    <input id="quad_core_Q" maxlength="1" class="quad_core" type="text">
-    <input id="quad_core_U" maxlength="1" class="quad_core" type="text">
-    <input id="quad_core_A" maxlength="1" class="quad_core" type="text">
-    <input id="quad_core_D" maxlength="1" class="quad_core" type="text">
-    <input id="quad_core_C" maxlength="1" class="quad_core" type="text">
-    <input id="quad_core_O" maxlength="1" class="quad_core" type="text">
-    <input id="quad_core_R" maxlength="1" class="quad_core" type="text">
-    <input id="quad_core_E" maxlength="1" class="quad_core" type="text">
-</div>
-<div>
-    <input id="threads_T" maxlength="1" class="threads" type="text">
-    <input id="threads_H" maxlength="1" class="threads" type="text">
-    <input id="threads_R" maxlength="1" class="threads" type="text">
-    <input id="threads_E" maxlength="1" class="threads" type="text">
-    <input id="threads_A" maxlength="1" class="threads" type="text">
-    <input id="threads_D" maxlength="1" class="threads" type="text">
-    <input id="threads_S" maxlength="1" class="threads" type="text">
-</div>
-<div>
-    <input id="cache_C" maxlength="1" class="cache" type="text">
-    <input id="cache_A" maxlength="1" class="cache" type="text">
-    <input id="cache_C" maxlength="1" class="cache" type="text">
-    <input id="cache_H" maxlength="1" class="cache" type="text">
-    <input id="cache_E" maxlength="1" class="cache" type="text">
-</div>
+
+<input id="ipt_validar">
+<button onclick="verificar()">Veificar</button>
 </body>
 </html>
+
+<script>
+    function verificar() {
+        var validacao = ipt_validar.value
+        if (validacao == 'RAM') {
+            r.innerHTML = 'R'
+            a.innerHTML = 'A'
+            m.innerHTML = 'M'
+        }
+    }
+</script>
