--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -15,29 +15,32 @@
     <div id="m"> </div>
     </div>
 <div class="rom">
-    <div> </div>
-    <div> </div>
-    <div> </div>
+    <div id="r2"> </div>
+    <div id="o"> </div>
+    <div id="m2"> </div>
 </div>
 <div class="cpu">
-    <div> </div>
-    <div> </div>
-    <div> </div>
+    <div id="c"> </div>
+    <div id="p"> </div>
+    <div id="u"> </div>
 </div>
-<div class="ula">
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="memoria_de_massa">
+    <div id="m3"> </div>
+    <div id="e"> </div>
+    <div id="m4"> </div>
+    <div id="o2"> </div>
+    <div id="r3"> </div>
+    <div id="i"> </div>
+    <div id="a2"> </div>
+    <div id="d"> </div>
+    <div id="e2"> </div>
+    <div id="m5"> </div>
+    <div id="a3"> </div>
+    <div id="s"> </div>
+    <div id="s2"> </div>
+    <div id="a4"> </div>
 </div>
-<div class="registradores">
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="eprom">
     <div> </div>
     <div> </div>
     <div> </div>
@@ -157,10 +160,36 @@
 <script>
     function verificar() {
         var validacao = ipt_validar.value
-        if (validacao == 'RAM') {
+        if (validacao == 'RAM' || validacao == 'ram') {
             r.innerHTML = 'R'
             a.innerHTML = 'A'
             m.innerHTML = 'M'
+        }
+        if(validacao == 'ROM' || validacao == 'rom'){
+            r2.innerHTML = 'R'
+            o.innerHTML = 'O'
+            m2.innerHTML = 'M'
+        }
+        if(validacao == 'cpu' || validacao == 'CPU' ){
+            c.innerHTML = 'C'
+            p.innerHTML = 'P'
+            u.innerHTML = 'U'
+        }
+        if(validacao == 'memoria de massa' || validacao == 'MEMORIA DE MASSA'){
+            m3  .innerHTML = 'M'
+            e   .innerHTML = 'E'
+            m4  .innerHTML = 'M'
+            o2  .innerHTML = 'O'
+            r3  .innerHTML = 'R'
+            i   .innerHTML = 'I'
+            a2  .innerHTML = 'A'
+            d   .innerHTML = 'D'
+            e2  .innerHTML = 'E'
+            m5  .innerHTML = 'M'
+            a3  .innerHTML = 'A'
+            s   .innerHTML = 'S'
+            s2  .innerHTML = 'S'
+            a4  .innerHTML = 'A'
         }
     }
 </script>
