--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -41,11 +41,11 @@
     <div id="a4"> </div>
 </div>
 <div class="eprom">
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+    <div id="E"> </div>
+    <div id="P"> </div>
+    <div id="R"> </div>
+    <div id="O"> </div>
+    <div id="M"> </div>
 </div>
 <div>
     <div> </div>
@@ -176,20 +176,27 @@
             u.innerHTML = 'U'
         }
         if(validacao == 'memoria de massa' || validacao == 'MEMORIA DE MASSA'){
-            m3  .innerHTML = 'M'
-            e   .innerHTML = 'E'
-            m4  .innerHTML = 'M'
-            o2  .innerHTML = 'O'
-            r3  .innerHTML = 'R'
-            i   .innerHTML = 'I'
-            a2  .innerHTML = 'A'
-            d   .innerHTML = 'D'
-            e2  .innerHTML = 'E'
-            m5  .innerHTML = 'M'
-            a3  .innerHTML = 'A'
-            s   .innerHTML = 'S'
-            s2  .innerHTML = 'S'
-            a4  .innerHTML = 'A'
+            m3.innerHTML = 'M'
+            e.innerHTML = 'E'
+            m4.innerHTML = 'M'
+            o2.innerHTML = 'O'
+            r3.innerHTML = 'R'
+            i.innerHTML = 'I'
+            a2.innerHTML = 'A'
+            d.innerHTML = 'D'
+            e2.innerHTML = 'E'
+            m5.innerHTML = 'M'
+            a3.innerHTML = 'A'
+            s.innerHTML = 'S'
+            s2.innerHTML = 'S'
+            a4.innerHTML = 'A'
+        }
+        if(validacao == 'eprom' || validacao == 'EPROM'){
+            E.innerHTML = 'E'
+            P.innerHTML = 'P'
+            R.innerHTML = 'R'
+            O.innerHTML = 'O'
+            M.innerHTML = 'M'
         }
     }
 </script>
