todas as div nomeadas com suas respectivas classes :D

--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -47,48 +47,38 @@
     <div id="O"> </div>
     <div id="M"> </div>
 </div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="i_sete">
     <div> </div>
     <div> </div>
 </div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="address">
+    <div class="a"> </div>
+    <div class="d"> </div>
+    <div class="d"> </div>
+    <div class="r"> </div>
+    <div class="e"> </div>
+    <div class="s"> </div>
+    <div class="s"> </div>
 </div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="dat_bus">
+    <div class="d"> </div>
+    <div class="a"> </div>
+    <div class="t"> </div>
+    <div class="a"> </div>
+    <div class="b"> </div>
+    <div class="u"> </div>
+    <div class="s"> </div>
 </div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="threads">
+    <div class="t"> </div>
+    <div class="h"> </div>
+    <div class="r"> </div>
+    <div class="e"> </div>
+    <div class="a"> </div>
+    <div class="d"> </div>
+    <div class="s"> </div>
 </div>
-<div>
-    <div> <div>
-    <div> <div>
-</div>
-<div>
-    <div> </div>
-    <div> </div>
+<div class="quadcore">
     <div> </div>
     <div> </div>
     <div> </div>
@@ -98,58 +88,58 @@
     <div> </div>
     <div> </div>
 </div>
-<div>
+<div class="dma">
     <div> </div>
     <div> </div>
+    <div> </div>
+</div>
+<div class="cache">
     <div> </div>
     <div> </div>
     <div> </div>
     <div> </div>
     <div> </div>
 </div>
-<div>
-    <div> <div>
-    <div> <div>
+<div class="registradores">
+    <div class="r"> </div>
+    <div class="e"> </div>
+    <div class="g"> </div>
+    <div class="i"> </div>
+    <div class="s"> </div>    
+    <div class="t"> </div>
+    <div class="r"> </div>
+    <div class="a"> </div>
+    <div class="d"> </div>
+    <div class="o"> </div>
+    <div class="r"> </div>
+    <div class="e"> </div>
+    <div class="s"> </div>
 </div>
-<div>
-    <div> <div>
-    <div> <div>
+<div class="i_cinco">
+    <div class="i"> <div>
+    <div class="5"> <div>
 </div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="ula">
+    <div class="u"> </div>
+    <div class="l"> </div>
+    <div class="a"> </div>
 </div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="flash">
+    <div class="f"> </div>
+    <div class="l"> </div>
+    <div class="a"> </div>
+    <div class="s"> </div>
+    <div class="h"> </div>
 </div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-</div>
-<div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+<div class="dualcore">
+    <div class="d"> </div>
+    <div class="u"> </div>
+    <div class="a"> </div>
+    <div class="l"> </div>
+    <div class="c"> </div>
+    <div class="o"> </div>
+    <div class="r"> </div>
+    <div class="e"> </div>
 </div>
 
 <input id="ipt_validar">
@@ -198,5 +188,6 @@
             O.innerHTML = 'O'
             M.innerHTML = 'M'
         }
+
     }
 </script>
