ids devidamente e corretamente nomeados do html

--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -48,98 +48,98 @@
     <div id="M"> </div>
 </div>
 <div class="i_sete">
-    <div> </div>
-    <div> </div>
+    <div id="i2"> </div>
+    <div id="7"> </div>
 </div>
 <div class="address">
-    <div class="a"> </div>
-    <div class="d"> </div>
-    <div class="d"> </div>
-    <div class="r"> </div>
-    <div class="e"> </div>
-    <div class="s"> </div>
-    <div class="s"> </div>
+    <div id="a5"> </div>
+    <div id="d2"> </div>
+    <div id="d3"> </div>
+    <div id="r4"> </div>
+    <div id="e3"> </div>
+    <div id="s3"> </div>
+    <div id="s4"> </div>
 </div>
-<div class="dat_bus">
-    <div class="d"> </div>
-    <div class="a"> </div>
-    <div class="t"> </div>
-    <div class="a"> </div>
-    <div class="b"> </div>
-    <div class="u"> </div>
-    <div class="s"> </div>
+<div class="data_bus">
+    <div id="d4"> </div>
+    <div id="a6"> </div>
+    <div id="t"> </div>
+    <div id="a7"> </div>
+    <div id="b"> </div>
+    <div id="u2"> </div>
+    <div id="s5"> </div>
 </div>
 <div class="threads">
-    <div class="t"> </div>
-    <div class="h"> </div>
-    <div class="r"> </div>
-    <div class="e"> </div>
-    <div class="a"> </div>
-    <div class="d"> </div>
-    <div class="s"> </div>
+    <div id="t2"> </div>
+    <div id="h"> </div>
+    <div id="r5"> </div>
+    <div id="e4"> </div>
+    <div id="a8"> </div>
+    <div id="d5"> </div>
+    <div id="s6"> </div>
 </div>
 <div class="quadcore">
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+    <div id="q"> </div>
+    <div id="u3"> </div>
+    <div id="a9"> </div>
+    <div id="d6"> </div>
+    <div id="c2"> </div>
+    <div id="o4"> </div>
+    <div id="r6"> </div>
+    <div id="e5"> </div>
 </div>
 <div class="dma">
-    <div> </div>
-    <div> </div>
-    <div> </div>
+    <div id="d7"> </div>
+    <div id="m6"> </div>
+    <div id="a10"> </div>
 </div>
 <div class="cache">
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
-    <div> </div>
+    <div id="c3"> </div>
+    <div id="a11"> </div>
+    <div id="c4"> </div>
+    <div id="h2"> </div>
+    <div id="e6"> </div>
 </div>
 <div class="registradores">
-    <div class="r"> </div>
-    <div class="e"> </div>
-    <div class="g"> </div>
-    <div class="i"> </div>
-    <div class="s"> </div>    
-    <div class="t"> </div>
-    <div class="r"> </div>
-    <div class="a"> </div>
-    <div class="d"> </div>
-    <div class="o"> </div>
-    <div class="r"> </div>
-    <div class="e"> </div>
-    <div class="s"> </div>
+    <div id="r7"> </div>
+    <div id="e7"> </div>
+    <div id="g"> </div>
+    <div id="i3"> </div>
+    <div id="s7"> </div>    
+    <div id="t3"> </div>
+    <div id="r8"> </div>
+    <div id="a12"> </div>
+    <div id="d8"> </div>
+    <div id="o5"> </div>
+    <div id="r9"> </div>
+    <div id="e8"> </div>
+    <div id="s8"> </div>
 </div>
 <div class="i_cinco">
-    <div class="i"> <div>
-    <div class="5"> <div>
+    <div id="i4"> <div>
+    <div id="5"> <div>
 </div>
 <div class="ula">
-    <div class="u"> </div>
-    <div class="l"> </div>
-    <div class="a"> </div>
+    <div id="u4"> </div>
+    <div id="l1"> </div>
+    <div id="a13"> </div>
 </div>
 <div class="flash">
-    <div class="f"> </div>
-    <div class="l"> </div>
-    <div class="a"> </div>
-    <div class="s"> </div>
-    <div class="h"> </div>
+    <div id="f"> </div>
+    <div id="l2"> </div>
+    <div id="a14"> </div>
+    <div id="s9"> </div>
+    <div id="h3"> </div>
 </div>
 <div class="dualcore">
-    <div class="d"> </div>
-    <div class="u"> </div>
-    <div class="a"> </div>
-    <div class="l"> </div>
-    <div class="c"> </div>
-    <div class="o"> </div>
-    <div class="r"> </div>
-    <div class="e"> </div>
+    <div id="d9"> </div>
+    <div id="u5"> </div>
+    <div id="a15"> </div>
+    <div id="l3"> </div>
+    <div id="c4"> </div>
+    <div id="o6"> </div>
+    <div id="r10"> </div>
+    <div id="e9"> </div>
 </div>
 
 <input id="ipt_validar">
@@ -174,7 +174,7 @@
             i.innerHTML = 'I'
             a2.innerHTML = 'A'
             d.innerHTML = 'D'
-            e2.innerHTML = 'E'
+            e5.innerHTML = 'E'
             m5.innerHTML = 'M'
             a3.innerHTML = 'A'
             s.innerHTML = 'S'
