--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -49,7 +49,7 @@
 </div>
 <div class="i_sete">
     <div id="i2"> </div>
-    <div id="7"> </div>
+    <div id="sete"> </div>
 </div>
 <div class="address">
     <div id="a5"> </div>
@@ -117,7 +117,7 @@
 </div>
 <div class="i_cinco">
     <div id="i4"> <div>
-    <div id="5"> <div>
+    <div id="cinco"> <div>
 </div>
 <div class="ula">
     <div id="u4"> </div>
@@ -187,6 +187,112 @@
             R.innerHTML = 'R'
             O.innerHTML = 'O'
             M.innerHTML = 'M'
+        }
+
+        if(validacao == 'i7' || validacao == 'I7') {
+            i2.innerHTML = 'I'
+            sete.innerHTML = '7'
+        }
+
+        if(validacao == 'dualcore' || validacao == 'DUALCORE') {
+            d9.innerHTML = 'D'
+            u5.innerHTML = 'U'
+            a15.innerHTML = 'A'
+            l3.innerHTML = 'L'
+            c4.innerHTML = 'C'
+            o6.innerHTML = 'O'
+            r10.innerHTML = 'R'
+            e9.innerHTML = 'E'
+        }
+
+        if(validacao == 'flash' || validacao == 'FLASH') {
+            f.innerHTML == 'F'
+            l2.innerHTML == 'L'
+            a14.innerHTML == 'A'
+            s9.innerHTML == 'S'
+            h3.innerHTML == 'H'
+        }
+
+        if(validacao == 'address' || validacao == 'ADDRESS') {
+            a5.innerHTML == 'A'
+            d2.innerHTML == 'D'
+            d3.innerHTML == 'D'
+            r4.innerHTML == 'R'
+            e3.innerHTML == 'E'
+            s3.innerHTML == 'S'
+            s4.innerHTML == 'S'
+        }
+
+        if(validacao == 'ula' || validacao == 'ULA') {
+            u4.innerHTML == 'U'
+            l1.innerHTML == 'L'
+            a13.innerHTML == 'A'
+        }
+
+        if(validacao == 'i5' || validacao == 'I5') {
+            i4.innerHTML == 'I'
+            cinco.innerHTML == '5'
+        }
+
+        if(validacao == 'registradores' || validacao == 'registradores') {
+            r7.innerHTML == 'R'
+            e7.innerHTML == 'E'
+            g.innerHTML == 'G'
+            i3.innerHTML == 'I'
+            s7.innerHTML == 'S'
+            t3.innerHTML == 'T'
+            r8.innerHTML == 'R'
+            a12.innerHTML == 'A'
+            d8.innerHTML == 'D'
+            o5.innerHTML == 'O'
+            r9.innerHTML == 'R'
+            e8.innerHTML == 'E'
+            s8.innerHTML == 'S'
+        }
+
+        if(validacao == 'cache' || validacao == 'CACHE') {
+            c3.innerHTML == 'C'
+            a11.innerHTML == 'A'
+            c4.innerHTML == 'C'
+            h2.innerHTML == 'H'
+            e6.innerHTML == 'E'
+        }
+
+        if(validacao == 'dma' || validacao == 'DMA') {
+            d7.innerHTML == 'D'
+            m6.innerHTML == 'M'
+            a10.innerHTML == 'A'
+        }
+
+        if(validacao == 'quadcore' || validacao == 'QUADCORE') {
+            q.innerHTML == 'Q'
+            u3.innerHTML == 'U'
+            a9.innerHTML == 'A'
+            d6.innerHTML == 'D'
+            c2.innerHTML == 'C'
+            o4.innerHTML == 'O'
+            r6.innerHTML == 'R'
+            e5.innerHTML == 'E'
+        }
+
+        if(validacao == 'threads' || validacao == 'THREADS') {
+            t2.innerHTML == 'T'
+            h.innerHTML == 'H'
+            r5.innerHTML == 'R'
+            e4.innerHTML == 'E'
+            a8.innerHTML == 'A'
+            d5.innerHTML == 'D'
+            s6.innerHTML == 'S'
+        }
+
+        if(validacao == 'data bus' || validacao == 'DATA BUS') {
+            d4.innerHTML == 'D'
+            a6.innerHTML == 'A'
+            t.innerHTML == 'T'
+            a7.innerHTML == 'A'
+            b.innerHTML == 'B'
+            u2.innerHTML == 'U'
+            s5.innerHTML == 'S'
         }
 
     }
