--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="containerGeral">
-    <h3> Responda </h3>
+    <h3> Tente acertar! </h3>
     <div id="div_perguntas"></div>
-
+        
     <input id="ipt_validacao">
-    <button onclick="validarResposta()">Validar Resposta</button><br> <br>
+    <button onclick="validarResposta()">Resposta</button><br> <br>
     <div class="section">
     <table>
         <tr>
@@ -140,7 +140,7 @@
             <td></td>
             <td></td>
             <td class="registradori5">I</td>
-            <td class=i5">5</td>
+            <td class="i5">5</td>
             <td></td>
             <td></td>
             <td></td>
@@ -568,5 +568,5 @@
 
     function pergunta(){
 
-    }
+}
 </script>
